Updated the CMS, didn't get it running. Added a password setup in the CMS until i can be bothered adding a mailing method.
